--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   google_fonts: ^6.2.1
+  curved_navigation_bar: ^1.0.3
 
 flutter:
   uses-material-design: true
